<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="36dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/common_text"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_2"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="sortByPackBarcode"
            android:text="@string/barcode"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="sortByPackNo"
            android:text="@string/package_no"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <!-- 新长 -->

        <TextView
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/length_new"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <!-- 新宽 -->

        <TextView
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/width_new"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <!-- 新高 -->

        <TextView
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/height_new"
            android:textSize="13sp" />
        <!-- 原长 -->
        
        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/length_old"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <!-- 原宽 -->

        <TextView
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/width_old"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <!-- 原高 -->

        <TextView
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/height_old"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/user_name"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/update_time"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:background="@color/gray_dark" />

</LinearLayout>