<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="36dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/load_unload_item_tv1"
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/barcode" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/load_unload_item_tv2"
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/package_no" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/load_unload_item_tv3"
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/vendor" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/load_unload_item_tv4"
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/pic" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/load_unload_item_tv5"
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/task_name" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/load_unload_item_tv6"
            style="@style/common_text"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/user_name" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/load_unload_item_tv7"
            style="@style/common_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/update_time" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:background="@color/gray_dark" />

</LinearLayout>