<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="36dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/returtn_item_tv_0"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_2"
            android:textColor="#000"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/returtn_item_tv_1"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/barcode"
            android:textColor="#000"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/returtn_item_tv_2"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/package_no"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/returtn_item_tv_3"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/return_cargo_mode"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/returtn_item_tv_4"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/return_cargo_reason"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/returtn_item_tv_5"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/user_name"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/returtn_item_tv_6"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/update_time"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/grgray" />

</LinearLayout>