<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="36dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/abnormal_item_tv0"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_2"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/abnormal_item_tv1"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/barcode"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/abnormal_item_tv2"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/package_no"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/abnormal_item_tv3"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/exceptional_mode"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/abnormal_item_tv4"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/exceptional_remarks"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/abnormal_item_tv5"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="wrap_content"
            android:background="@color/grgray" />

        <TextView
            android:id="@+id/abnormal_item_tv6"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/update_time"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:background="@color/gray_dark" />

</LinearLayout>